--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -314,3 +314,7 @@ textarea
     padding: 0px
     padding-top: 5px
 
+.tunnusluku-valinta-form
+  margin-bottom: 30px
+  label
+    margin-right: 20px
