--- a/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
+++ b/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
@@ -28,18 +28,8 @@
   <br>
 
   <div ng-if="tunnusluku" ng-repeat="chart in tunnusluku.charts" ng-init="chartid = $index">
-    <div class="row">
-      <div class="col-md-10">
-        <h4>{{chart.title}}</h4>
-      </div>
-      <div class="col-md-2 lataacsv">
-        <a ng-csv="exportCsvMultibar(tunnuslukugraafi.data())"
-           filename="tunnuslukudata.csv"
-           csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa
-          CSV
-        </a>
-      </div>
-    </div>
+
+    <h3>{{chart.title}}</h3>
 
     <form id="tunnusluku-filter-form" name="tunnusluku-filter-form" class="form-inline">
       <form-group label="{{filter.nimi}}" ng-repeat="filter in chart.filters">
@@ -51,9 +41,12 @@
       </form-group>
     </form>
 
-    <div class="row">
-      <nvd3 options='chart.options' data='data[chartid]' api="chart.api"></nvd3>
-    </div>
+    <nvd3 options='chart.options' data='data[chartid]' api="chart.api"></nvd3>
+
+    <a ng-csv="exportCsvMultibar(tunnuslukugraafi.data())" class="pull-right"
+       filename="tunnuslukudata.csv"
+       csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
+    </a>
   </div>
 
   <div ng-if="!tunnusluku">
