--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -318,3 +318,10 @@ textarea
   margin-bottom: 30px
   label
     margin-right: 20px
+
+.tunnusluku-filter-form
+  margin-bottom: 20px
+  label
+    margin-right: 10px
+  select
+    margin-right: 20px
