--- a/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
+++ b/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
@@ -41,7 +41,7 @@
       </form-group>
     </form>
 
-    <nvd3 options='chart.options' data='data[chartid]' api="chart.api"></nvd3>
+    <nvd3 options='chart.options' data='data[chartid]' api="params.charts[chartid].api"></nvd3>
 
     <a ng-csv="exportCsvMultibar(tunnuslukugraafi.data())" class="pull-right"
        filename="tunnuslukudata.csv"
