--- a/app/scripts/components/ely/maararahatarpeet/index.html
+++ b/app/scripts/components/ely/maararahatarpeet/index.html
@@ -47,7 +47,7 @@
 
   <hr>
 
-  <h4>Joukkoliikennetuki liikennöitsijöille</h4>
+  <h4>Joukkoliikennetuki liikenteen ostoihin</h4>
 
   <div class="table-responsive">
     <table class="table table-hover table-condensed">
