--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -22,7 +22,8 @@
           </a>
         </li>
 
-        <li class="header__button {{ ownApplicationTabActive() | toClass:'is-active' }}" ng-show="sallittu(user, 'view-oma-hakemus')">
+        <li class="header__button {{ ownApplicationTabActive() | toClass:'is-active' }}"
+            ng-show="sallittu(user, 'view-oma-hakemus')">
           <a class="header__link" ui-sref="app.hakija.hakemukset.omat()">
             Omat hakemukset
           </a>
@@ -42,8 +43,11 @@
           <juku-statistic-dropdown user="user"></juku-statistic-dropdown>
         </li>
       </ul>
-
-      <juku-user-dropdown user="user"></juku-user-dropdown>
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <juku-user-dropdown user="user"></juku-user-dropdown>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
