--- a/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
@@ -5,7 +5,7 @@
     </juku-form-row>
     <juku-form-row>
       <small><em>Tämän välilehden tietojen täyttöaste:</em></small>
-      <uib-progressbar animate="false" value="vuositayttoaste" type="success"><b>{{vuositayttoaste}}%</b>
+      <uib-progressbar animate="false" value="tayttoaste(tunnusluvut, 'TTYT')" type="success"><b>{{tayttoaste(tunnusluvut,'TTYT')}}%</b>
       </uib-progressbar>
     </juku-form-row>
     <juku-form-row>
