--- a/app/scripts/views/tunnusluvut/muokkaus-psab.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psab.html
@@ -4,7 +4,7 @@
   </juku-form-row>
   <juku-form-row>
     <small><em>Tämän välilehden tietojen täyttöaste:</em></small>
-    <uib-progressbar animate="false" value="vuositayttoaste" type="success"><b>{{vuositayttoaste}}%</b>
+    <uib-progressbar animate="false" value="tayttoaste(tunnusluvut,'BR')" type="success"><b>{{tayttoaste(tunnusluvut,'BR')}}%</b>
     </uib-progressbar>
   </juku-form-row>
   <juku-form-row>
