--- a/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
+++ b/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
@@ -43,7 +43,7 @@
 
     <nvd3 options='chart.options' data='data[chartid]' api="params.charts[chartid].api"></nvd3>
 
-    <a ng-csv="csv[chartid]" class="pull-right"
+    <a ng-csv="csv[chartid]" class="pull-right view-link"
        filename="tunnuslukudata.csv"
        field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
     </a>
