LIVIJUKU-696: Tunnusluvut: progress bar -toteutus frontend

--- a/app/scripts/views/tunnusluvut/muokkaus-psak.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psak.html
@@ -4,7 +4,7 @@
   </juku-form-row>
   <juku-form-row>
     <small><em>Tämän välilehden tietojen täyttöaste:</em></small>
-    <uib-progressbar animate="false" value="tayttoaste(tunnusluvut,'KOS')" type="success"><b>{{tayttoaste(tunnusluvut,'KOS')}}%</b>
+    <uib-progressbar animate="false" value="tayttoaste(tunnusluvut,'KOS')" type="{{tayttoasteType(tunnusluvut,'KOS')}}"><b>{{tayttoaste(tunnusluvut,'KOS')}}%</b>
     </uib-progressbar>
   </juku-form-row>
   <juku-form-row>
