--- a/app/scripts/views/tunnusluvut/muokkaus-sa.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-sa.html
@@ -4,7 +4,7 @@
   </juku-form-row>
   <juku-form-row>
     <small><em>Tämän välilehden tietojen täyttöaste:</em></small>
-    <uib-progressbar animate="false" value="tayttoaste(tunnusluvut,'SA')" type="success"><b>{{tayttoaste(tunnusluvut,'SA')}}%</b>
+    <uib-progressbar animate="false" value="tayttoaste(tunnusluvut,'SA')" type="{{tayttoasteType(tunnusluvut,'SA')}}"><b>{{tayttoaste(tunnusluvut,'SA')}}%</b>
     </uib-progressbar>
   </juku-form-row>
   <juku-form-row>
