LIVIJUKU-746: Tunnuslukujen syöttäminen: Linkki VRK:n sivulle "Asukasmäärä"-otsikon perään

--- a/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
@@ -184,7 +184,10 @@
               </td>
             </tr>
             <tr>
-              <td class="col-md-8">Asukasmäärä</td>
+              <td class="col-md-8">Asukasmäärä (<a
+                href="http://www.vrk.fi/default.aspx?id=278&docid=3973"
+                target="_blank">VRK:n asukaslukutilastot</a>)
+              </td>
               <td class="col-md-4">
                 <form-group-compact label="Asukasmäärä" errormessage="kokonaislukuErrorMessage">
                   <input id="taustatiedot-asukasmaara" name="asukasmaara"
