LIVIJUKU-747: Tunnuslukujen syöttäminen: "alue"-sanojen korvaaminen termillä "toimivalta-alue", Muuta lisäksi Taustatieto-osion "Organisaatio"-otsikko muotoon "Toimivaltainen viranomainen" ja "TVV" muotoon "Toimivaltaryhmä".

--- a/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
@@ -10,14 +10,14 @@
       </uib-progressbar>
     </juku-form-row>
     <juku-form-row>
-      <h3>Alueen taustatiedot</h3>
+      <h3>Toimivalta-alueen taustatiedot</h3>
       <div class="row">
         <div class="col-md-6">
-          <h5>Organisaatio</h5>
+          <h5>Toimivaltainen viranomainen</h5>
           {{$root.userOrganisaatio}}
         </div>
         <div class="col-md-6">
-          <h5>TVV</h5>
+          <h5>Toimivaltaryhmä</h5>
           {{$root.userLajitunnus | toApplicantName}}
         </div>
       </div>
@@ -128,7 +128,7 @@
         <table class="table table-hover table-condensed">
           <thead>
             <tr>
-              <th colspan="2">Alueen perustiedot</th>
+              <th colspan="2">Toimivalta-alueen perustiedot</th>
             </tr>
           </thead>
           <tbody>
