--- a/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
@@ -27,8 +27,13 @@
         <table class="table table-hover table-condensed">
           <thead>
             <tr>
-              <th class="col-md-10">Joukkoliikenteen suunnittelun ja organisaation henkilöstö</th>
-              <th class="col-md-2">
+              <th colspan="2">Henkilöstö</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="col-md-8">Joukkoliikenteen suunnittelun ja organisaation henkilöstö</td>
+              <td class="col-md-4">
                 <form-group-compact label="Henkilöstö" errormessage="kokonaislukuErrorMessage">
                   <input id="taustatiedot-henkilosto" name="henkilosto"
                          ng-model="tunnusluvut.alue.henkilosto"
@@ -39,9 +44,9 @@
                          noenter
                          select-on-click>
                 </form-group-compact>
-              </th>
+              </td>
             </tr>
-          </thead>
+          </tbody>
         </table>
       </div>
     </juku-form-row>
@@ -133,7 +138,7 @@
           </thead>
           <tbody>
             <tr>
-              <td class="col-md-8">Alueen kuntien lukumäärä</td>
+              <td class="col-md-8">Toimivalta-alueen kuntien lukumäärä</td>
               <td class="col-md-4">
                 <form-group-compact label="Kuntien lukumääärä" errormessage="kokonaislukuErrorMessage">
                   <input id="taustatiedot-kuntienlkm" name="kuntienlkm"
@@ -259,21 +264,28 @@
       <div class="table-responsive">
         <table class="table table-hover table-condensed">
           <thead>
-            <th class="col-md-10">Toimivalta-alueen pysäkkien lukumäärä tie- ja katuverkolla (pysäkkitietoa tarjoaa mm.
-              <a href="http://www.digiroad.fi/aineisto/pysakkiaineisto/erillisirrotus/fi_FI/erillisirrotus/"
-                 target="_blank">digiroad</a>)
-            </th>
-            <th class="col-md-2">
-              <form-group-compact label="Pysäkkien lukumääärä" errormessage="kokonaislukuErrorMessage">
-                <input id="taustatiedot-pysakkienlkm" name="pysakkienlkm"
-                       class="form-control notbold"
-                       placeholder="lkm" noenter
-                       integer-only maxlength="9" select-on-click
-                       ng-readonly="isReadonly()"
-                       ng-model="tunnusluvut.alue.pysakkimaara">
-              </form-group-compact>
-            </th>
+            <tr>
+              <th colspan="2">Pysäkkien lukumäärä</th>
+            </tr>
           </thead>
+          <tbody>
+            <tr>
+              <td class="col-md-8">Toimivalta-alueen pysäkkien lukumäärä tie- ja katuverkolla (pysäkkitietoa tarjoaa mm.
+                <a href="http://www.digiroad.fi/aineisto/pysakkiaineisto/erillisirrotus/fi_FI/erillisirrotus/"
+                   target="_blank">digiroad</a>)
+              </td>
+              <td class="col-md-4">
+                <form-group-compact label="Pysäkkien lukumääärä" errormessage="kokonaislukuErrorMessage">
+                  <input id="taustatiedot-pysakkienlkm" name="pysakkienlkm"
+                         class="form-control notbold"
+                         placeholder="lkm" noenter
+                         integer-only maxlength="9" select-on-click
+                         ng-readonly="isReadonly()"
+                         ng-model="tunnusluvut.alue.pysakkimaara">
+                </form-group-compact>
+              </td>
+            </tr>
+          </tbody>
         </table>
       </div>
     </juku-form-row>
